<?xml version="1.0"?>
<package format="3">
  <name>pc2_multi_merger</name>
  <version>0.0.1</version>
  <description>TODO</description>
  
  <maintainer email="arne.hitzmann@atr.jp">Arne Hitzmann</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
